--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="finished_tasks">Finished Tasks</string>
     <string name="great_job">Great Job!</string>
     <string name="ongoing_tasks">Ongoing Tasks</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="time_example">HH:MM:SS</string>
 
 </resources>
