--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,5 +55,8 @@
     <string name="finished_tasks">Finished Tasks</string>
     <string name="great_job">Great Job!</string>
     <string name="ongoing_tasks">Ongoing Tasks</string>
+        <string name="tv_taskDone_value">50</string>
+    <string name="tv_taskOngoin_value">50</string>
+    <string name="dont_give_up">Don\'t Give up!</string>
 
 </resources>
